# velodown

./: CHANGELOG.md  README.md  package-lock.json  package.json
.github/workflows/: aur-publish.yml  release.yml
packaging/chocolatey/: velodown.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
packaging/flatpak/: com.velodown.dev.desktop  com.velodown.dev.metainfo.xml
packaging/snap/: snapcraft.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: velodown.desktop
src-tauri/src/: main.rs
src/lib/: DownloadList.svelte  Settings.svelte
src/routes/: +layout.svelte
velodown/: package-lock.json  package.json
velodown/src/: App.svelte
velodown/src-tauri/: Cargo.toml  tauri.conf.json
velodown/src-tauri/src/: main.rs
velodown/src/lib/: AddDownload.svelte  DownloadList.svelte  Header.svelte  Settings.svelte
velodown/src/routes/: +layout.svelte  +page.svelte  app.css
velodown/src/routes/add/: +page.svelte
velodown/src/routes/settings/: +page.svelte
