[package]
name = "velodown"
version = "0.1.0"
description = "A powerful download manager"
authors = ["you"]
edition = "2021"

[lib]
name = "velodown_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "notification-all", "dialog-all"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
rand = "0.9.1"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["stream", "rustls-tls"] }
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dirs = "5.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
